# datasette-permissions-metadata

./: pyproject.toml
datasette_permissions_metadata/: __init__.py
tests/: test_permissions_metadata.py
